# docs/swagger.yaml
@@ -21,6 +21,26 @@ paths:
                             - Leib
             summary: Get all the product in API
             description: Return all Products that are registered in API
+        post:
+            parameters:
+                -
+                    name: body
+                    description: |
+                        The Product that is to be created.
+                    schema:
+                        $ref: '#/definitions/new-Product'
+                    in: body
+                    required: true
+            responses:
+                '201':
+                    description: Send 201 when Product is successfully added to the database.
+                    schema:
+                        $ref: '#/definitions/new-Product'
+                '400':
+                    description: 'Missing parameter, please review your request data.'
+            summary: Create a new product into the app
+            description: |
+                Creates a new Product instance with its required details for further usage.
     '/products/{ProductID}':
         get:
             tags:
@@ -58,3 +78,27 @@ definitions:
                 type: string
         example:
             error: Error message
+    new-Product:
+        title: Root Type for new-Product
+        description: ''
+        required:
+            - Category
+            - Description
+            - Name
+            - Price
+        type: object
+        properties:
+            Name:
+                type: string
+            Price:
+                format: double
+                type: number
+            Category:
+                type: string
+            Description:
+                type: string
+        example:
+            Name: NewProductName
+            Price: 9.99
+            Category: NewProductCategory
+            Description: NewProductDescription
